--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activity.FlashCardActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".activity.MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
